Added forced exit on close